--- a/public/assets/css/page/dashboard.css
+++ b/public/assets/css/page/dashboard.css
@@ -241,12 +241,17 @@
 	overflow: hidden;
 	width: calc(50% - 0.4rem);
 	box-shadow: var(--shadow-outset-small);
-	margin: 0 0 0.4rem 0.4rem;
+	margin-bottom: 0.4rem;
 	cursor: pointer;
+}
+
+.appointment-card:nth-of-type( 2n ) {
+	margin-right: 0.4rem;
 }
 
 .appointment-card.small {
 	width: calc(25% - 0.4rem);
+	height: 9rem;
 }
 
 .link-absolute {
