add gallery page
add faq page

add default page

add blog category page

--- a/public/assets/css/global/main.css
+++ b/public/assets/css/global/main.css
@@ -49,6 +49,11 @@ button > i {
 
 body {
     position: relative;
+    overflow-x: hidden;
+}
+
+a:hover {
+    color: var(--color-2);
 }
 
 .text-color-1 {
