--- a/public/assets/css/page/blog.css
+++ b/public/assets/css/page/blog.css
@@ -33,6 +33,8 @@
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
+    margin-right: 1rem;
+    max-width: 65%;
 }
 
 .blog-box-card > .blog-box-description {
