--- a/public/assets/css/global/main.css
+++ b/public/assets/css/global/main.css
@@ -10,7 +10,8 @@
 ::-webkit-scrollbar {
     width: 8px;
     padding: 15px;
-    height: 50vh;
+    /* height: 50vh; */
+    height: 4px;
 }
 
 ::-webkit-scrollbar-track {
