--- a/public/assets/css/global/responsive.css
+++ b/public/assets/css/global/responsive.css
@@ -382,10 +382,14 @@
     }
 
     #reservation_form > .col-6 {
-        flex: 0 0 calc( 50% - 1rem );
+        flex: 0 0 calc( 75% - 1rem );
         margin-bottom: 1rem;
         overflow: auto;
         width: 100%;
+    }
+
+    #reservation_form > .col-6:last-child {
+        flex: 0 0 calc( 25% - 1rem );
     }
 
     #reservation_form > .col-6:last-child {
